# gossip_rust

./: Cargo.toml  README.md
src/: gossip.rs  lib.rs  main.rs  message.rs  server.rs
tests/: benchmark.rs  lunch_100_servers.rs  lunch_10_servers.rs  lunch_2_servers.rs  lunch_3_servers.rs  start_client.rs  temp
