[package]
name = "gossiprust"
version = "0.1.0"
authors = ["Guangyu Zhu <guangyu.zhu@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
rand = "0.7.0"
time = "0.1"
tokio = "0.1"
futures = "0.1"